einsum-derive/tests/cases/number_of_arguments_mismatch.stderr
error: Argument number mismatch: subscripts (2), args (1)
 --> tests/cases/number_of_arguments_mismatch.rs:6:13
  |
6 |     let c = einsum!("ij,jk->ik", a /* needs one more arg */);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `einsum` (in Nightly builds, run with -Z macro-backtrace for more info)
